--- a/notebooks/a_modules/mechanics/1_Motion_in_1D.ipynb
+++ b/notebooks/a_modules/mechanics/1_Motion_in_1D.ipynb
@@ -1585,7 +1585,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1599,7 +1599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
