--- a/notebooks/a_modules/waves/1_Introduction_To_Waves.ipynb
+++ b/notebooks/a_modules/waves/1_Introduction_To_Waves.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ebf54e7",
    "metadata": {},
    "source": [
     "# Introduction to waves\n",
@@ -12,7 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "098cde24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01fdfbd7",
    "metadata": {},
    "source": [
     "## Wave properties\n",
@@ -48,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "999acb79",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0cc7cd",
    "metadata": {},
    "source": [
     "## Simple Harmonic Motion\n",
@@ -126,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "237a567a",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30206e59",
    "metadata": {},
    "source": [
     "Note a few things in the plot above:\n",
@@ -188,7 +181,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ecf937",
    "metadata": {},
    "source": [
     "Using trigonometry, $F = ma = -mgsin(\\theta)$, thus $a = gsin(\\theta)$. Approximate that for small $sin(\\theta) = \\theta$, so $F = ma = mg\\theta = m \\frac{y}{l}$. Thus, $a = \\frac{F}{ml}y$ (tussenstap). If the restoring force is tension from a string for example, it can be approximated as F=-2T, considering a string pulls the body from the left and right side.\n",
@@ -199,7 +191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30641004",
    "metadata": {},
    "source": [
     "## Wave equation"
@@ -207,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9007096a",
    "metadata": {},
    "source": [
     "To derive the wave equation, a string with density $\\rho$ per unit length is stretched in the x direction with tension force T. A wave can be described as coupled simple harmonic motion. This can be thought of as a rope with lots of masses being displaced individually.\n",
@@ -232,7 +222,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6562f1f3",
    "metadata": {},
    "source": [
     "One solution to the wave equation is by using travelling waves of the form $u(x,t) = f(x \\pm ct)$. At t=0, f(x) is a shape in space. $f(x-ct)$ is the shape of f(x) when travelling to the right at speed c.$ f(x+ct) $is the shape of f(x) when travelling to the left at speed c.\n",
@@ -245,7 +234,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c0fca8",
    "metadata": {},
    "source": [
     "To plot the wave equation, a few initial conditions have to be set. consider"
@@ -253,7 +241,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee4348e7",
    "metadata": {},
    "source": [
     "## Types of waves\n",
@@ -280,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a5614e",
    "metadata": {},
    "source": [
     "## References\n",
@@ -291,7 +277,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a47c709",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -299,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
