--- a/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
+++ b/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
@@ -170,7 +170,66 @@
    "source": [
     "## Arithmetic with Complex Numbers\n",
     "\n",
-    "### Equality\n"
+    "### Equality\n",
+    "Complex numbers can only be equal to each other if the real and imaginary parts are equal to each other\n",
+    "\n",
+    "### Addition and Subtraction\n",
+    "Both of these operations work by adding like terms:\n",
+    "$$ (x + iy) \\pm (u + iv) = (x \\pm u) + i(y \\pm v) $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8+9j)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding or subtracting complex numbers in python is a case of simply\n",
+    "# just doing so!\n",
+    "z1 = 3 + 2j \n",
+    "z2 = 5 + 7j\n",
+    "z1 + z2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiplication\n",
+    "This is done by expanding brackets:\n",
+    "$$ (x+iy)(u+iv)=xu+i^2yv+iyu+ixv\\\\=(xu-yv)+iyu+ixv$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1+31j)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiplication between complex numbers is performed using '*':\n",
+    "z1 * z2"
    ]
   },
   {
