--- a/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "$$f_{Nyq}=\\frac{500}{\\alpha}$$\n",
     "\n",
-    "Wraparound will occur frequencies are higher than the spatial Nyquist frequency\n",
+    "Wraparound will occur frequencies are higher than the spatial Nyquist frequency <br>\n",
     "<img src=\"images/wraparound.png\" style=\"width:500px;height:250px\" align=\"center\"/>\n",
     "\n",
     "If we consider spatial aliasing in terms of true dip (e.g. in a depth converted stack), then calculating the spatial Nyquist becomes a simple calculation involving velocity $v$, trace spacing (CMP spacing) ${\\delta}x$ and the dip angle ${\\theta}$:\n",
@@ -54,11 +54,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Practice 1\n",
+    "For a linear event in a seismic section, the time dip is measured in terms of milliseconds per trace. A linear dipping event with a slope of 10 ms/trace on a seismic section, at what temporal frequency will the data be spatially aliased? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At 50.0 Hz will the data be spatially aliased.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_aliasing(alpha):\n",
+    "    f_nyq = 500/alpha\n",
+    "    return f_nyq\n",
+    "\n",
+    "print(\"At\", f_aliasing(10), \"Hz will the data be spatially aliased.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,8 +120,15 @@
    "metadata": {},
    "source": [
     "### Reference\n",
-    "2022 notes and practical from Lecture 6 of the module ESE 60023 Seismic Processing"
+    "2022 notes and practical from Lecture 6 of the module ESE 60023 Seismic Processing and Lecture 2 of the module ESE 70015 Advance Seismic Processing."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
