--- a/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
@@ -100,7 +100,7 @@
     "## Spatial Aliasing in F-K domain\n",
     "Spatial Aliasing is significantly easier to observe in the F-K domain, where frequencies above the spatial Nyquist appear as “wrap-around”. We can design a filter to cut out any aliased energy (though this may result in a loss of bandwidth for higher dips) or resample the data at a smaller trace separation (this will make the data volume larger, resulting in more expensive processing). Vice-versa, if there is no spatial aliasing in a dataset, can we increase the trace separation, making further processing cheaper without degrading the image.\n",
     "\n",
-    "In the figure, the CMP gather is highly affected by wraparound with higher trace separation.\n",
+    "In the figure, the CMP gather is highly affected by wraparound with higher trace separation.<br>\n",
     "<img src=\"images/fkdomain.png\" style=\"width:300px;height:300px\" align=\"center\"/>"
    ]
   },
