added extra modules

--- a/notebooks/d_geosciences/Waves/Attenuation.ipynb
+++ b/notebooks/d_geosciences/Waves/Attenuation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Attenuation\n",
-    "In this notebook, the different types of attenuation will be discussed. Group velocity and dispersion (the other topics of lecture 7 of Y2 waves) are discussed *here* (link?).\n",
+    "In this notebook, the different types of attenuation will be discussed. Group velocity and dispersion are discussed *here* (link?).\n",
     "\n",
     "Attenuation is the loss of intensity as waves travel through a medium."
    ]
