--- a/notebooks/d_geosciences/Waves/Refraction.ipynb
+++ b/notebooks/d_geosciences/Waves/Refraction.ipynb
@@ -5,7 +5,7 @@
    "id": "36f8c130",
    "metadata": {},
    "source": [
-    "## Superposition of Waves, Oblique Reflection and Refraction\n",
+    "## Superposition of Waves, Reflection and Refraction\n",
     "In this notebook, wave phases are discussed, as well as superposition, reflection and refraction."
    ]
   },
@@ -89,25 +89,6 @@
     "plt.grid(True)\n",
     "plt.title(\"Superposition of waves\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af280663",
-   "metadata": {},
-   "source": [
-    "## Oblique rays and polarisation\n",
-    "A wave is polarised if all motion is in a given plane. In reality, most waves are unpolarised and consist of groups of motion in many different planes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da461624",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://www.baumer.com/medias/sys_master/images-content/images-content/h98/hae/8940792119326/Grafik-Polarisation-2-EN.gif\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"400\"/>\n",
-    "\n"
    ]
   },
   {
