--- a/notebooks/d_geosciences/Waves/Transmission_and_Reflection.ipynb
+++ b/notebooks/d_geosciences/Waves/Transmission_and_Reflection.ipynb
@@ -5,7 +5,7 @@
    "id": "614021e4",
    "metadata": {},
    "source": [
-    "# Impedance, transmission and Reflection"
+    "# Impedance, Transmission and Reflection"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "6bd1c1cd",
    "metadata": {},
    "source": [
-    "In this chapter, impedance, wave energy, reflection and transmission will be discussed."
+    "In this chapter, impedance, reflection and transmission will be discussed."
    ]
   },
   {
