--- a/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
+++ b/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
@@ -27,8 +27,6 @@
    "source": [
     "## Background On Complex Numbers\n",
     "\n",
-    "From Lecture 1\n",
-    "\n",
     "### Imaginary Numbers\n",
     "Imaginary numbers are numbers outside of the real number system.\n",
     "\n",
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +67,7 @@
        "complex"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,6 +166,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The Complex Conjugate\n",
+    "For eevry complex number, $ z = x +iy $, we cam define its **complex conjugate**, denoted by $ z^* $ or $ \\bar{z} $ by changing the sign of the imaginary component:\n",
+    "$$ z^* \\equiv x - iy $$\n",
+    "\n",
+    "We can then write the real and imaginary parts of $ z $ using the complex conjugate:\n",
+    "$$ \\text{Re}(z)=\\frac{1}{2}(z+z^*),\\enspace\\text{Im}(z)=\\frac{1}{2i}(z-z^*) $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1j"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Similar to extracting the real and imaginary parts from a complex\n",
+    "# number, we can use '.conjugate()'\n",
+    "\n",
+    "# Using the value of z from earlier\n",
+    "z.conjugate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Arithmetic with Complex Numbers\n",
     "\n",
     "### Equality\n",
@@ -180,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +223,7 @@
        "(8+9j)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,6 +264,37 @@
    "source": [
     "# Multiplication between complex numbers is performed using '*':\n",
     "z1 * z2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Division\n",
+    "Division of complex numbers is completed by using the complex conjugate to make the denominator real:\n",
+    "$$ \\frac{u+iv}{x+iy}=\\frac{u+iv}{x+iy}\\frac{x-iy}{x-iy}\\\\\\,\\,\\,=\\frac{ux-vy+i(vx-uy)}{x^2+y^2}\\\\\\,\\,\\,=\\frac{ux-vy}{x^2+y^2}+i\\frac{vx-uy}{x^2+y^2} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.39189189189189183-0.14864864864864866j)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Similar to multiplication, division between complex numbers is\n",
+    "# performed using '/'\n",
+    "z1 / z2"
    ]
   },
   {
