Started Stress-Strain Curves
Theory

--- a/notebooks/a_modules/deforming_the_earth/1_stress_strain.ipynb
+++ b/notebooks/a_modules/deforming_the_earth/1_stress_strain.ipynb
@@ -6,7 +6,15 @@
    "source": [
     "(1_stress_strain)=\n",
     "\n",
-    "# Stress-Strain Curves"
+    "# Stress-Strain Curves\n",
+    "\n",
+    "## Stress\n",
+    "Stress is defined as the force per unit area, $ \\frac{F}{A} $, applied on a body by external forces. There are two types of stress, **Normal** and **Shear**. Stresses are normal if a force acts perpendicularly to the surface of an object. Normal stresses can be compressional or tensional. Shear stress is the force per unit areain a direction parallel to the area to which it is applied. \n",
+    "\n",
+    "The units of stress are $\\text{N/m}^2$, Pa, or Bars ($\\text{10}^5$ Pa)\n",
+    "\n",
+    "## Strain\n",
+    "Strain is the deformation (e.g. elongation/contraction) experienced by a body due to an applied strain. Stress can lead to changes in volume, size, and orientation of objects. **Homogenous** strain is when straight lines on the object remain straight, and where strain is the same throughout the body. **Heterogenous** strain is where strain is non-uniform throughout the body."
    ]
   },
   {
