--- a/notebooks/a_modules/deforming_the_earth/1_stress_strain.ipynb
+++ b/notebooks/a_modules/deforming_the_earth/1_stress_strain.ipynb
@@ -14,7 +14,25 @@
     "The units of stress are $\\text{N/m}^2$, Pa, or Bars ($\\text{10}^5$ Pa)\n",
     "\n",
     "## Strain\n",
-    "Strain is the deformation (e.g. elongation/contraction) experienced by a body due to an applied strain. Stress can lead to changes in volume, size, and orientation of objects. **Homogenous** strain is when straight lines on the object remain straight, and where strain is the same throughout the body. **Heterogenous** strain is where strain is non-uniform throughout the body."
+    "Strain is the deformation (e.g. elongation/contraction) experienced by a body due to an applied strain. Stress can lead to changes in volume, size, and orientation of objects. **Homogenous** strain is when straight lines on the object remain straight, and where strain is the same throughout the body. **Heterogenous** strain is where strain is non-uniform throughout the body.\n",
+    "\n",
+    "### Shear Strain\n",
+    "Shear strain is the amount of deformation perpendicular to a given line rather than parallel to it. There can be **Pure** and **Simple** shear. \n",
+    "\n",
+    "* Pure shear will have strain axes the same as the original body\n",
+    "* Simple shear is where deformation is rotational\n",
+    "\n",
+    "These components can be combined to define the homogenoues strain in a body.\n",
+    "\n",
+    "### Defining Strain\n",
+    "**Linear Strain**: the ratio of the change in length of the body due to the deformation to its original length in the direction of the force. It is given by:\n",
+    "$$ e = \\frac{(L-L_o)}{L_o} $$\n",
+    "\n",
+    "Where $e$ is the linear strain, $L_o$ is the original length of the body, and $L$ is the length of the body post-strain.\n",
+    "\n",
+    "**Stretch factor**: the ratio of change between the body's post-strain length original length\n",
+    "\n",
+    "$$ \\theta = \\frac{L}{L_0} = 1 + e $$"
    ]
   },
   {
