--- a/notebooks/a_modules/deforming_the_earth/2_mohr_coloumb.ipynb
+++ b/notebooks/a_modules/deforming_the_earth/2_mohr_coloumb.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "(2_mohr_coloumb)=\n",
     "\n",
-    "# Mohr's Circle and Coloumb Failure"
+    "# Mohr's Circle and Coloumb Failure\n",
+    "\n",
+    "Brittle behaviour is observed when bodies no longer behave either plastically or elastically. This is when fractures occur in a body.\n",
+    "\n",
+    "Fractures are discontinuities in a rock or body which are associated with offset in mechanical properties such as strength, and spatial properties such as displacement.\n",
+    "\n",
+    "## Coulomb Failure Criterion\n"
    ]
   },
   {
