--- a/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
+++ b/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
@@ -106,6 +106,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "2022 notes and practical from Lecture 2 of the module ESE 60023 Seismic Processing and Lecture 4 of the module ESE 70015 Advance Seismic Processing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
