--- a/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
+++ b/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Basic behaviours of this number are shown below:\n",
     "\n",
-    "$$ i^2 = (\\sqrt{-1})^2 = -1 \\\\ i^3 = i \\times i^2 = -i \\\\ i^4 = i^2 \\times i^2 = 1$$,\n",
+    "$$ i^2 = (\\sqrt{-1})^2 = -1 \\\\ i^3 = i \\times i^2 = -i \\\\ i^4 = i^2 \\times i^2 = 1$$\n",
     "\n",
     "and\n",
     "\n",
@@ -99,20 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using z from the code above:\n",
     "# Extracting the real part from complex number z\n",
@@ -169,6 +158,12 @@
     "### The Complex Conjugate\n",
     "For eevry complex number, $ z = x +iy $, we cam define its **complex conjugate**, denoted by $ z^* $ or $ \\bar{z} $ by changing the sign of the imaginary component:\n",
     "$$ z^* \\equiv x - iy $$\n",
+    "\n",
+    "This is an [involutory operation](https://en.wikipedia.org/wiki/Involution_(mathematics)) since \\\\( (z^*)^* = z \\\\) with the following properties:\n",
+    "\n",
+    "$$ (z_1 \\pm z_2)^* = z_1^* \\pm z_2^* \\\\\n",
+    "(z_1 \\cdot z_2)^* = z_1^* \\cdot z_2^* \\\\\n",
+    "(z^{-1})^* = (z^*)^{-1} $$\n",
     "\n",
     "We can then write the real and imaginary parts of $ z $ using the complex conjugate:\n",
     "$$ \\text{Re}(z)=\\frac{1}{2}(z+z^*),\\enspace\\text{Im}(z)=\\frac{1}{2i}(z-z^*) $$"
@@ -241,7 +236,7 @@
    "metadata": {},
    "source": [
     "### Multiplication\n",
-    "This is done by expanding brackets:\n",
+    "Multiplying two complex numbers is done by expanding the brackets and grouping real and imaginary parts:\n",
     "$$ (x+iy)(u+iv)=xu+i^2yv+iyu+ixv\\\\=(xu-yv)+iyu+ixv$$"
    ]
   },
@@ -272,6 +267,7 @@
    "source": [
     "### Division\n",
     "Division of complex numbers is completed by using the complex conjugate to make the denominator real:\n",
+    "\n",
     "$$ \\frac{u+iv}{x+iy}=\\frac{u+iv}{x+iy}\\frac{x-iy}{x-iy}\\\\\\,\\,\\,=\\frac{ux-vy+i(vx-uy)}{x^2+y^2}\\\\\\,\\,\\,=\\frac{ux-vy}{x^2+y^2}+i\\frac{vx-uy}{x^2+y^2} $$"
    ]
   },
@@ -296,6 +292,13 @@
     "# performed using '/'\n",
     "z1 / z2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
