--- a/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
+++ b/notebooks/a_modules/seismology/CMP_Common_Mid_Point_Gather.ipynb
@@ -29,7 +29,7 @@
     "## Survey Geometries\n",
     "Survey area is divided into equally sized CMP bins. This process is often referred to “binning”. Traces whose mid-point falls within that bin are assigned to that CMP (with the total number of traces per bin being our survey fold!). This is straightforward for marine surveys with simple geometries, where the CMP bins are usually spaced at half the receiver (group) interval. \n",
     "\n",
-    "$$NF=\\frac{{\\delta}X_{R}}{2{\\delta}X_{S}}NC$$\n",
+    "$$NF=\\frac{{\\Delta}X_{R}}{2{\\Delta}X_{S}}NC$$\n",
     "\n",
     "where $NF$ is no. of fold; $NC$ is no. of channel; $X_{R}$ is the receiver interval; $X_{S}$ is the source interval.\n",
     "\n",
