--- a/notebooks/a_modules/seismology/Temporal_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Temporal_aliasing.ipynb
@@ -14,9 +14,9 @@
     "## What is it?\n",
     "At high frequencies, data exceeding the Nyquist frequency will be aliased, and should be removed. At these frequencies the temporal sampling rate of our data is unable to constrain the signal, and will lead to noise in our data. (e.g. if the data is sampled at 4ms, the Nyquist frequency will be 125 Hz)\n",
     "\n",
-    "$$f_{Nyq}=\\frac{1}{2{\\delta}t}$$\n",
+    "$$f_{Nyq}=\\frac{1}{2{\\Delta}t}$$\n",
     "\n",
-    "$${\\delta}t\\leq\\frac{1}{2f_{Nyq}}$$\n",
+    "$${\\Delta}t\\leq\\frac{1}{2f_{Nyq}}$$\n",
     "\n",
     "Time dimension $t$ is controlled by the temporal sampling of our traces (e.g. 4ms in our dataset), while distance/offset dimension $x$ is controlled by the spacing of our traces. For a given lateral wavenumber $k_{x}$, the FK migration is remapping the temporal frequency ${\\omega}$ to a new vertical wavenumber $k_{z}$.\n",
     "\n",
