--- a/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
+++ b/notebooks/a_modules/seismology/Spatial_aliasing.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "As with regular temporal aliasing, we observe spatial aliasing at frequencies where the wavenumber $k$ is too high for each cycle to be sampled twice by a given trace interval $x$:\n",
     "\n",
-    "$$k_{Nyq}=\\frac{1}{2{\\delta}x}$$\n",
+    "$$k_{Nyq}=\\frac{1}{2{\\Delta}x}$$\n",
     "\n",
     "Temporal aliasing will occur at the spatial Nyquist frequency when:\n",
     "\n",
@@ -35,7 +35,7 @@
     "When dealing with gathers in time, <br>\n",
     "we can consider velocity $v$ as a function of dip (${\\alpha}$, in ms/trace):\n",
     "\n",
-    "$$v=\\frac{1000{\\delta}x}{\\alpha}$$\n",
+    "$$v=\\frac{1000{\\Delta}x}{\\alpha}$$\n",
     "\n",
     "Which combined give:\n",
     "\n",
@@ -44,9 +44,9 @@
     "Wraparound will occur frequencies are higher than the spatial Nyquist frequency <br>\n",
     "<img src=\"images/wraparound.png\" style=\"width:500px;height:250px\" align=\"center\"/>\n",
     "\n",
-    "If we consider spatial aliasing in terms of true dip (e.g. in a depth converted stack), then calculating the spatial Nyquist becomes a simple calculation involving velocity $v$, trace spacing (CMP spacing) ${\\delta}x$ and the dip angle ${\\theta}$:\n",
+    "If we consider spatial aliasing in terms of true dip (e.g. in a depth converted stack), then calculating the spatial Nyquist becomes a simple calculation involving velocity $v$, trace spacing (CMP spacing) ${\\Delta}x$ and the dip angle ${\\theta}$:\n",
     "\n",
-    "$$f_{Nyq}=\\frac{v}{4\\:{\\delta}x\\:sin{\\theta}}$$\n",
+    "$$f_{Nyq}=\\frac{v}{4\\:{\\Delta}x\\:{\\sin}{\\theta}}$$\n",
     "\n",
     "<img src=\"images/table.png\" style=\"width:300px;height:240px\" align=\"center\"/>\n",
     "\n",
