--- a/a_modules/seismology/Ghosting.ipynb
+++ b/a_modules/seismology/Ghosting.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "$$f_{n}=\\frac{v}{2d}$$\n",
     "\n",
-    "When designing survey need to achieve a delicate balance between the depth of the sources and receivers (deeper = quieter!) and the expected location of the notch (deeper = notch at lower frequency i.e. more reduced bandwidth!).\n",
+    "When designing survey, we need to achieve a delicate balance between the depth of the sources and receivers (deeper = quieter!) and the expected location of the notch (deeper = notch at lower frequency i.e. more reduced bandwidth!).\n",
     "\n",
     "<img src=\"images/notch.png\" style=\"width:300px;height:400px\" align=\"center\"/>\n",
     "\n",
