--- a/a_modules/continental_tectonics/Isostasy.ipynb
+++ b/a_modules/continental_tectonics/Isostasy.ipynb
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thickness of lithospheric mantle = 76.5 km.\n"
+      "Thickness of lithospheric mantle = 76.5 km.\n"
      ]
     }
    ],
@@ -114,19 +114,19 @@
     "t_w2 = 6000 # metres\n",
     "\n",
     "t_m = (t_w1*(rho_w - rho_a) + t_w2*(rho_a - rho_w)) / (rho_m - rho_a)\n",
-    "print(f'thickness of lithospheric mantle = {t_m/1000.:.1f} km.')"
+    "print(f'Thickness of lithospheric mantle = {t_m/1000.:.1f} km.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total thickness of oceanic lithosphere in old abyssal plain = 83.6 km.\n"
+      "Total thickness of oceanic lithosphere in old abyssal plain = 83.6 km.\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
     "# Work out t_l by considering thickness of crust:\n",
     "\n",
     "t_l = t_oc + t_m\n",
-    "print(f'total thickness of oceanic lithosphere in old abyssal plain = {t_l/1000.:.1f} km.')"
+    "print(f'Total thickness of oceanic lithosphere in old abyssal plain = {t_l/1000.:.1f} km.')"
    ]
   },
   {
