--- a/_sources/a_modules/continental_tectonics/Ridge_Push_and_Slab_Pull.ipynb
+++ b/_sources/a_modules/continental_tectonics/Ridge_Push_and_Slab_Pull.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -185,14 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.25 x 10**13 N per m of subduction zone\n"
+      "2.25 x 10**13 N per m of subduction zone\n",
+      "Force due to slab-pull much higher than ridge-push.\n"
      ]
     }
    ],
@@ -205,7 +207,8 @@
     "d = 615000 # metres\n",
     "\n",
     "fsp = (8*g*alpha*rho_m*T1*(t_l**2.))/(pi**4.)*R*(1 - np.exp(-1*( ((pi**2)*d) / (2*R*t_l) ))) # e**0 = 1\n",
-    "print(f'{fsp/1e13:.2f}', 'x 10**13 N per m of subduction zone')"
+    "print(f'{fsp/1e13:.2f}', 'x 10**13 N per m of subduction zone')\n",
+    "print(\"Force due to slab-pull much higher than ridge-push.\")"
    ]
   },
   {
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +297,7 @@
     "    f1 = calc_fsp(z,g,alpha,rho_m,T1,t_l,pi,R,d)\n",
     "    forces.append(f1)\n",
     "    \n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.plot(forces, zs/1000.)\n",
     "plt.gca().invert_yaxis()\n",
     "plt.xlabel('$F_{sp}$ (N/m)')\n",
