Brittle Failure Theory Update

--- a/notebooks/a_modules/deforming_the_earth/2_mohr_coloumb.ipynb
+++ b/notebooks/a_modules/deforming_the_earth/2_mohr_coloumb.ipynb
@@ -12,7 +12,25 @@
     "\n",
     "Fractures are discontinuities in a rock or body which are associated with offset in mechanical properties such as strength, and spatial properties such as displacement.\n",
     "\n",
-    "## Coulomb Failure Criterion\n"
+    "## Brittle Failure\n",
+    "A material can be defined as brittle if it fails when subjected to an applied stres without any significant deformation. This means there will be little to no permanent strain prior to failre.\n",
+    "\n",
+    "Failure can be in both compression or tension, but is most commonly seen in extension than in compression for rocks.\n",
+    "\n",
+    "Brittle behaviour is most commonly seen in the upper crust, whilst plastic behaviour is seen in the lower crust, with a brittle-plastic transition occuring in between.\n",
+    "\n",
+    "## Couloumb Failure\n",
+    "There is, in general, an apparent linear relationship between the normal and shear stresses on failure:\n",
+    "\n",
+    "$$ \\tau=\\sigma_n\\mu+c $$\n",
+    "\n",
+    "Where $\\tau$, $\\sigma_n$, $\\mu$, and $c$ are the shear stress, normal stress, angle of internal friction, and cohesion, respectively.\n",
+    "\n",
+    "The other shear plane can be defined by:\n",
+    "\n",
+    "$$ \\tau=\\sigma_n(-\\mu)+c $$\n",
+    "\n",
+    "Coloumb's equation can then be related to real failure in rocks. The gradient is the tangent of the internal angle. "
    ]
   },
   {
