--- a/notebooks/a_modules/math_methods_1/2_Vectors.ipynb
+++ b/notebooks/a_modules/math_methods_1/2_Vectors.ipynb
@@ -65,8 +65,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Vectors)=\n",
     "# Vectors (Lecture 1)\n",
     "\n",
     "This notebook will illustrate how to apply the maths discussed in the lecture using Python.\n",
@@ -4216,7 +4221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
