--- a/notebooks/a_modules/math_methods_1/3_Multivariable_Calculus.ipynb
+++ b/notebooks/a_modules/math_methods_1/3_Multivariable_Calculus.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Multivariable_calculus)=\n",
     "# Multivariable calculus (Lecture 2)"
    ]
   },
@@ -427,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
