--- a/notebooks/a_modules/math_methods_1/5_Matrices.ipynb
+++ b/notebooks/a_modules/math_methods_1/5_Matrices.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Matrices)=\n",
     "# Matrices (Lecture 4)\n",
     "\n",
     "```{thebe-button}\n",
@@ -404,6 +409,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -419,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
