--- a/notebooks/a_modules/math_methods_1/6_Eigenvalues.ipynb
+++ b/notebooks/a_modules/math_methods_1/6_Eigenvalues.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Eigenvalues)=\n",
     "# Eigenvalues (Lecture 5)"
    ]
   },
@@ -608,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
