--- a/a_modules/math_methods_1/1_Coordinate_Systems.ipynb
+++ b/a_modules/math_methods_1/1_Coordinate_Systems.ipynb
@@ -25,8 +25,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Coordinate_systems)=\n",
     "# Coordinate systems (Lecture 1)\n",
     "\n",
     "This notebook will illustrate how to apply the maths discussed in the lecture using Python.\n",
