--- a/a_modules/math_methods_1/4_Vector_Calculus.ipynb
+++ b/a_modules/math_methods_1/4_Vector_Calculus.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(Vector_calculus)=\n",
     "# Vector calculus (Lecture 3)"
    ]
   },
@@ -695,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
