--- a/a_modules/math_methods_1/8_ODEs.ipynb
+++ b/a_modules/math_methods_1/8_ODEs.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-mm1"
+    ]
+   },
    "source": [
+    "(ODEs)=\n",
     "# ODEs (Lecture 7)"
    ]
   },
@@ -764,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
